# mcp-zuul

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  TIME_FILTERING.md  pyproject.toml  release.sh  server.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker.yml  publish-registry.yml
src/mcp_zuul/: __init__.py  auth.py  classifier.py  config.py  errors.py  formatters.py  helpers.py  parsers.py  prompts.py  resources.py  server.py  tools.py
src/mcp_zuul/tools/: __init__.py  _builds.py  _common.py  _config.py  _console.py  _logjuicer.py  _logs.py  _status.py  _tests.py  _write.py
tests/: _factories.py  conftest.py  test_auth.py  test_classifier.py  test_files_in_failure.py  test_get_build_log.py  test_hardening.py  test_helpers.py  test_kerberos_reauth.py  test_logjuicer.py  test_prompts.py  test_resources.py  test_response_sizes.py  test_server.py  test_test_results.py  test_tools_builds.py  test_tools_console.py  test_tools_logs.py  test_tools_status.py  test_tools_tenants_pipelines.py  test_write_tools.py
